<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">BabeCry Translte</string>
    <string name="aar_save">Save</string>
    <string name="aar_paused">Paused</string>
    <string name="aar_recording">Recording</string>
    <string name="aar_playing">Playing</string>
    <string name="navigation_drawer_open" translatable="false" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home">الرئيسية</string>
    <string name="menu_gallery">تسجيل الصوت</string>
    <string name="menu_slideshow">نصائح عامة</string>
    <string name="menu_galleryy">عن المبادرة</string>
    <string name="menu_slideshoww">عن الفريق </string>
    <string name="description">
        لتصبحي خبيرة بكيفية مساعدة مولودك على النوم، والتي تعتبر غاية كل الأمهات خاصة في الأشهر الأولى من الولادة، إليك 10 أفكار؛ اعملي بها لتساعدي طفلك وتعوديه أن يخلد للنوم براحة وبدون مشاكل، وكذلك أن لا يستيقظ بصورة متتالية أثناء الليل.
.</string>
    <string name="one">1. حاولي التقليص من العوامل المساعدة للنوم، مثلاً هز المولود إلى أن ينام أو وضعه في كرسي السيارة والسياقة في المدينة، إلى أن يغفو أو استخدام المصاصة. لا مانع من الاستعانة بهذه الأساليب في الأسابيع الأولى من الولادة، ولكن بعدها سيعتاد عليها المولود، ويطلبها كلما أراد النوم، حتى وإن استيقظ في الليل، فلن ينام مجدداً إلا إذا استعملت نفس الأسلوب.</string>
    <string name="two">2. جربي أساليب جديدة أثناء النهار لمساعدته وليس خلال فترة الليل، فمثلاً إذا أردت تدريبه على الاستغناء عن المصاصة أو عدم هزه للنوم، فافعلي ذلك خلال النهار عندما تكونين مفعمة بالطاقة ولديك القدرة على تحمل احتجاجه، بينما خلال الليل فسرعان ما ستفقدين عزيمتك بسبب التعب.</string>
    <string name="three">3. أثبتت الدراسات أن المواليد الصغار ينامون أفضل في العتمة، لذا احرصي أن تكون ستارة غرفة مولودك مبطنة بطبقة قماش تحجب أشعة الشمس؛ كي ينام لمدة أطول.</string>
    <string name="four">4. المواليد الصغار يتعلمون من التكرار، لذلك اجعلي نظاماً لطفلك تستمرين عليه؛ ليتعرف على أوقات النوم من خلاله ويتمهد له. مثلاً في المساء، الحمام، يتبعه أغنية تغنيها له، وأنت تلبسينه ملابس النوم؛ كي يربط هذه النغمات بوقت نومه.</string>
    <string name="five">5. إن كان مولودك في عمر ستة أشهر وأكثر، وكنت تقدمين له الفواكه والبقول، فغالباً هذه الأطعمة ستجعله مستيقظاً ومتيقظاً، وكذلك سيستيقظ مبكراً، بسبب حركة أمعائه. قدمي هذه الأطعمة في وقت الغداء، أما وجبته المسائية فلتكن غنية بالنشويات كالمعكرونة، الأرز، الخبز وكذلك الموز؛ كي يشعر بالشبع وينام لفترات أطول.</string>
    <string name="six">6. لا تقارني وضعك مع أمهات أخريات، فكل مولود يختلف عن غيره والمقارنة ستسبب لك ضغوطاً وإحباطاً.</string>
    <string name="seven">7. من عمر ستة أشهر وإن كان مولودك بوضع صحي جيد، ووزنه يزداد وفق عمره، فحاولي في هذه المرحلة التقليل من رضعات الليل، إن استيقظ فاتركيه لمدة 5 دقائق ليحاول أن يعود للنوم من دون تدخلك. إن لم يستقر، فعودي إليه وربتي على كتفه أو صدره بهدوء، وهمْس بصوت منخفض (شششششش). إن لم يجدِ الأمر فاحتضنيه لمدة 15 دقيقة كي يهدأ. إما إن فشلت جميع المحاولات فقدمي له الرضعة. هذه الطريقة ستمكنه من إعادة تنظيم ساعته. وتدريجياً سيهدأ ويستغني عن الرضعة.</string>
    <string name="eight">8. الموسيقى الهادئة فعالة جداً للمواليد الصغار، وتتوفر في الأسواق الأجهزة الخاصة، التي تصدر موسيقى هادئة، وتوضع في فراش الطفل، اختاري الذي يبعث ضوءاً خفيفاً والذي بإمكانك توقيته. أفضل الأصوات هي أصوات الطبيعة كصوت أمواج البحر، المطر، أو دقات القلب.</string>
    <string name="nine">9. المواليد يوصلون الرائحة بأشياء معينة، ولتساعدي مولودك على النوم، ضعي مثلاً بعض قطرات زيت زهرة البابونج أو الخزامى على منشفة صغيرة، أو قطعة قماش في غرفة المولود وقت النوم فهي ستساعد على الاسترخاء. وسيربط هذه الرائحة بوقت النوم.</string>
    <string name="ten">10. عندما يستقر طفلك، اسعي كي ينام 12 ساعة متواصلة، وأفضلها من الساعة 7 مساءً للساعة 7 صباحاً. احرصي على عتمة الغرفة والهدوء، وإن استيقظ للرضاعة أو لكونه منزعجاً فتعاملي مع الأمر بهدوء تام وباختصار. عند الصباح، افتحي الستارة وابتسمي وداعبيه؛ كي يعرف وقت الصباح واليوم قد بدأ.</string>
    <string name="two22">تحار أغلب الأمهات وبالأخص الجدد في التعامل مع الطفل كثير البكاء، تكشف الدكتورة «إيمان عبد العظيم «استشاري الأطفال، أسباب كثرة بكاء الطفل، يبكي جميع الأطفال عندما يعانون من الجوع أو التعب أو عدم الراحة أو المرض أو الألم. في بعض الأحيان يبكون لأنهم بحاجة إلى المودة. قد يبكي أيضاً الأطفال الصغار والأكبر سناً بسبب الإحباط أو الحزن أو الغضب، على سبيل المثال، ولكن قد يكون من الصعب في بعض الأحيان معرفة ما يحتاجه طفلك.لذلك عندما يبكي طفلك، ابدئي بالتحقق من أنه غير مريض أو مصاب. إذا لم تكوني متأكدة، فحددي موعداً مع طبيبك أو اتصلي بممرضة صحة الطفل والأسرة، إذا كان طفلك يبكي لسبب آخر، فهناك الكثير من الأشياء التي يمكنك القيام بها للمساعدةيولد الأطفال مع القدرة على البكاء، البكاء هو طريقهم الرئيسي للتواصل، نحو 1 من كل 10 أطفال يبكي كثيراً، «الكثير» يعني أكثر من ثلاث ساعات في اليوم. يميل الأطفال الذين تقل أعمارهم عن 12 شهراً إلى البكاء في وقت متأخر من بعد الظهر وفي المساء، قد يكون ذلك مرهقاً للغاية، خاصة إذا كنت مشغولة بأشياء مثل صنع العشاء أو إعطاء الأطفال الأكبر سناً حماماً، سوف تمر هذه المرحلة من البكاء الشديد، ربما في وقت أقرب مما تعتقدين.</string>
    <string name="two222">فيما يلي بعض الإستراتيجيات في التعامل مع الطفل كثير البكاء</string>
    <string name="four1">تشعر الأم بالقلق حين يسيل اللعاب بإستمرار من فم مولودها، وحين يكبر قليلاً فهي تضع فوطة صغيرة وتربطها على صدره أو تشبكها بدبوس لكي لا يبلل ملابسه، وكذلك لكي تستطيع أن تمسح لعاب المولود باستمرار، وكي يقوم من حولها بهذه المهمة في حال غيابها، ولكن الطب الحديث يرى أن لعاب المولود ليس ضاراً دائماً، بل له فوائد ويمكن أن تتعرفي عليها من خلال الدكتور محمد أبو داوود، إختصاصي طب الأطفال وحديثي الولادة كالآتي.
</string>
    <string name="four2">ما هي فوائد سيلان اللعاب من فم المولود؟</string>
    <string name="four3">يفيد اللعاب في طرد الميكروبات والجراثيم من فم وحلق المولود.

ويفيد اللعاب في تسهيل بلع الطعام عندما يتم إدخال الطعام الصلب للرضيع.

ويدل اللعاب على تطور الجهاز الهضمي للمولود بحيث أنه يصبح يتقبل الحليب الخارجي سواء حليب الأم، أو الحليب الصناعي.

ويدل اللعاب على أن المولود قد أصبح مستعداً لمرحلة التسنين.

يبدأ اللعاب في الزيادة في الشهر الثالث من عمر المولود، ولذلك يجب ألا تنزعج الأم من زيادته لأنه سوف يدل على نمو طفلها السليم، وبأنه يتدرج في مرحلة نموه بشكل صحيح مثل باقي الأطفال.

سبلان لعاب الرضيع مع وضعه لإصبعه في فمه يدل على أنه يشعر بالجوع، فهذه طريقة لكي تعرف الأم أن عليها سد جوع رضيعها.
</string>
    <string name="four4">أسباب سيلان اللعاب من الفم أثناء النوم</string>
    <string name="four5">تنفس طفلك من فمه أثناء النوم مما يؤدي إلى سيلان اللعاب أثناء النوم، ويجب البحث عن أسباب ذلك فقد يكون الطفل يعاني من وجود لحمية في الأنف.</string>
    <string name="four6">استرخاء عضلات جسم الطفل أثناء النوم؛ مما يؤدي لسيلان اللعاب؛ لأنه لا يبتلعه كما يحدث حين يكون مستيقظاً، وبالتالي لا يوجد طريقة لتصريف اللعاب وابتلاعه.</string>
    <string name="four7">إفراط طفلك في تناول الحمضيات قبل النوم.

تناول بعض الأدوية المحفزة لإفراز اللعاب.

نوم الطفل غير المريح مثل أن يكون صدغه على حافة الوسادة.
</string>
    <string name="four8">متى يكون سيلان اللعاب من فم الرضيع مقلقاً؟</string>
    <string name="four9">يمكن أن يكون سيلان اللعاب من فم الرضيع لدرجة كبيرة بحيث يتجمع في سقف حلقه وفمه، مما يهدده بالإختناق.
</string>
    <string name="four10">عندما يصبح الرضيع غير قادراً على النوم والرضاعة وتناول الطعام الصلب بعد عمر ستة أشهر بشكل طبيعي.</string>
    <string name="four11">في حال معاناة الرضيع من الإحمرار والإحتقان في الفم والحلق.

سيلان اللعاب بكثرة مع إرتفاع درجة حرارة الطفل.
</string>
    <string name="four12">معاناة الرضيع من الإرتجاع المريئي، ففي هذه الحالة يشعر الرضيع بحرقة في المريء فيسيل اللعاب لكي يخفف من شعوره بالحرقة.</string>
    <string name="four13">وفي حالات معينة قد يكون سيلان اللعاب دليلاً على إصابة الرضيع بحساسية الأنف، فيكون الأنف مسدوداً ويضطر لفتح فمه لكي يتنفس فيسيل اللعاب بكثرة.</string>
    <string name="four14">في حالة كثرة اللعاب دون أي سبب صحي، فيمكن مع تقدم عمر الرضيع إستخدام الكوب المتصل بمصاصة لكي يقوي عضلات لسانه وبالتالي يصبح لديه القدرة على إبتلاع اللعاب فلا يعاني من سيلان اللعاب من فمه.</string>
    <string name="four15">كما يجب تقليل إستخدام اللهاية للرضيع لأنها تزيد من إفراز اللعاب.</string>
    <string name="six1">
يبدأ التسنين خلال الفترة العمرية ما بين ستة أشهر إلى تسعة أشهر من عمر الطفل، وقد تختلف فترة التسنين من طفل إلى آخر، وتكتمل عملية التسنين ببلوغ الطفل سنتين ونصف السنة إلى ثلاث سنوات؛ الأسنان السفلية المعروفة بالقواطع المركزية هي أول الأسنان ظهوراً، وفي العادة يتبعها الأسنان الأربعة العلوية المعروفة بالقواطع المركزية الجانبية بعد ما يقارب 4 - 8 أسابيع</string>
    <string name="six2">بعد ذلك بفترة تبدأ القواطع الجانبية السفلية بالظهور، ومن ثمة يظهر أول ضرس -طاحونة- والأضراس أسنان خلفية تساعد على مضغ الطعام، يليها ظهور الأنياب التي تنمو في الفك العلوي، ثم تكتمل عشرون سنة من الأسنان الأساسية للطفل مع تمام الثالثة من عمره.</string>
    <string name="six3">أول الأسنان ظهوراً هي الأكثر إيلاماً في العادة، والسعال والتقيؤ أعراض غير مرتبطة بالتسنين، وكذلك سيلان الأنف وظهور طفح جلدي، والحمى الشديدة، العناية بالأسنان تبدأ قبل بروزها تجنباً للتسويس، إذ من الممكن أن تتساقط الأسنان اللبنية قبل الموعد الطبيعي لها وقبل جاهزية الأسنان الدائمة للبروز،   وهذا التساقط يؤدي إلى تجميع الأسنان اللبنية المتبقية لمحاولة سد الثغرات التي سببها هذا االتسن.</string>
    <string name="six4">أعراض تصاحب التسنين </string>
    <string name="six5">1- قلة النوم وصعوبة الإستغراق فيه مع الإستيقاظ ليلا عدة مرات والطفل الأكثر نشاطا هو الأكثر عرضة للمعاناة من اضطراب النوم</string>
    <string name="six6">2- العض بشدة؛ حيث إن الضغط الناتج عن هذه السلوكيات يساعد على تخفيف الألم بشكل مؤقت، استعملي حلقات التسنين المناسبة، والتي لا تحتوي على سائل خوفاً من حالات التسمم.</string>
    <string name="six7">3- فرك الأذن أو الخد...حيث إن الألم يصل إلى الأذنين والخدين، لكن الخوف أن يكون الطفل مصاباً بالتهاب في الأذن، وهنا لا بد من مراجعة الطبيب خاصة إذا رافق شد الأذن حدوث حمى واستمر الأمر.</string>
    <string name="six8">4-فقدان للشهية نتيجة تورم اللثة والتهابها؛ مما يجعل الطفل يرفض الطعام لأن عملية المضغ تسبب شعوراً أكبر بعدم الراحة والألم عند الطفل، وما ينتج من فقدان للشهية والتي يستعيدها خلال أسبوعين على أقصى تقدير.</string>
    <string name="six9">5-يحدث انتفاخ في موضع ظهور الأسنان فيبكي الطفل وينفعل معبراً عن انزعاجه... وتتراوح شدة البكاء عند الأطفال عند بدء العملية، وتستمر لبضع ساعات أو لعدة أيام أو أسابيع تبعاً لاختلاف شدة الألم الذي يصيب اللثة لديهم.</string>
    <string name="six10">6-فرط سيلان اللعاب والمعروف أن سيلان اللعاب يبدأ مع بلوغ الطفل شهرين، وهو موعد بدء وظيفة الغدد اللعابية، والطفل في هذا العمر لا يملك القدرة على التحكم بعضلات الرقبة، ولا يملك أسناناً تساعده على إبقاء اللعاب في الفم.</string>
    <string name="six11">7-خروج اللعاب من الفم أول علامات التسنين، ولكن انتبهي: أحياناً يكون هذا دليلاً على مواجهة الطفل لصعوبة في البلع.</string>
    <string name="six12">8-فقدان للشهية نتيجة تورم اللثة والتهابها؛ مما يجعل الطفل يرفض الطعام لأن عملية المضغ تسبب شعوراً أكبر بعدم الراحة والألم عند الطفل، وما ينتج من فقدان للشهية والتي يستعيدها خلال أسبوعين على أقصى تقدي.</string>
    <string name="six13">9-يحدث انتفاخ في موضع ظهور الأسنان فيبكي الطفل وينفعل معبراً عن انزعاجه... وتتراوح شدة البكاء عند الأطفال عند بدء العملية، وتستمر لبضع ساعات أو لعدة أيام أو أسابيع تبعاً لاختلاف شدة الألم الذي يصيب اللثة لديه</string>
    <string name="six14">10-فرط سيلان اللعاب والمعروف أن سيلان اللعاب يبدأ مع بلوغ الطفل شهرين، وهو موعد بدء وظيفة الغدد اللعابية، والطفل في هذا العمر لا يملك القدرة على التحكم بعضلات الرقبة، ولا يملك أسناناً تساعده على إبقاء اللعاب في الفم</string>
    <string name="six15">11-خروج اللعاب من الفم أول علامات التسنين، ولكن انتبهي: أحياناً يكون هذا دليلاً على مواجهة الطفل لصعوبة في البلع</string>
    <string name="six16">12-ارتفاع درجة الحرارة يرافق التسنين أيضاً، وإذا زاد واعتبرته حمى فهو دليل على وجود مرض أو مشكلة صحية معينة</string>
</resources>