<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeforiraq.myapp.four">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="188dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="15dp"
            android:layout_weight="55"
            android:gravity="center"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/luab" />


        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:textColor="#070707"
            android:textSize="18sp"
            android:text="@string/four1"
            app:layout_constraintBottom_toBottomOf="@id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />
        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four2"
            android:textColor="#545AB2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four3"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four4"
            android:textColor="#545AB2"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four5"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four6"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four7"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four8"
            android:textColor="#545AB2"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four9"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four10"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four11"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four12"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four13"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four14"
            android:textColor="#040303"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="400"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/four15"
            android:textColor="#040303"
            android:textSize="18sp" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>