<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeforiraq.myapp.six">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="373dp"
                android:layout_height="201dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="55"
                android:gravity="center"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/snn" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six1"
                android:textColor="#070707"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six2"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six3"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six4"
                android:textColor="#545AB2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six5"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six6"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six7"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six8"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six9"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six10"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six11"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six12"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six13"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six14"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six15"
                android:textColor="#040303"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six16"
                android:textColor="#040303"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>